# wayland-playground

./: CMakeLists.txt  sample-client.cc  wayland-client-helper.hpp  wayland-egl-helper.hpp  weston-shell-client.cc
utilities/: misc.hpp  scoped.hpp
